modification of modal (design)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
 	</nav>
 	<div id="modal">
 		<button class="close-button"><i class="fa-solid fa-xmark"></i></button>
-		<h2>Please input a task before submitting </h1>
+		<div id="modal-details">
+			<i class="fa-regular fa-circle-xmark"></i>
+			<h1>ERROR </h1>
+		</div>
+		<h3>The Task you're trying to submit is <span>BLANK</span></h3>
+		<h5>Please provide a task before submitting</h5>
 	</div>
 	<header>
 		<h3>Be Organized!</h3>
